<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/material_bar"
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/lg_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_bar"
        android:background="@color/code_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:id="@+id/register_layout_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_58dp"
        app:layout_constraintTop_toBottomOf="@+id/lg_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/material_nickname"
            android:textColor="@color/m_nick_name_color"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginLeft="@dimen/size_16dp" />

        <TextView
            android:id="@+id/register_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/material_please_input"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/lg_editText_hint"
            android:layout_marginRight="@dimen/size_16dp"
            android:drawableRight="@drawable/right_back"
            android:drawablePadding="6dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/lg_line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_name"
        android:background="@color/code_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <RelativeLayout
        android:id="@+id/register_layout_sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_58dp"
        app:layout_constraintTop_toBottomOf="@+id/lg_line1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/material_sex"
            android:textColor="@color/m_nick_name_color"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginLeft="@dimen/size_16dp" />

        <TextView
            android:id="@+id/register_txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/material_please_select"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/lg_editText_hint"
            android:layout_marginRight="@dimen/size_16dp"
            android:drawableRight="@drawable/right_back"
            android:drawablePadding="6dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/lg_line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_sex"
        android:background="@color/code_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5dp"/>

    <FrameLayout
        android:id="@+id/frameLayout_btn"
        app:layout_constraintTop_toBottomOf="@+id/lg_line2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/size_130dp"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_46dp">

        <Button
            android:id="@+id/btn_confirm"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/lg_btn_unConfirm"
            android:background="@drawable/selector_btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.manjinba.user.widget.ChrysanthemumView
            android:id="@+id/loading"
            app:lineCount="12"
            app:startColor="@color/white"
            app:endColor="@color/lg_loading_end"
            android:layout_gravity="center"
            android:layout_width="24dp"
            android:layout_height="24dp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>